src/test/ui/closures/2229_closure_analysis/edition-2018/capture-analysis-diagnostic.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/capture-analysis-diagnostic.rs:9:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: First Pass analysis includes:
  --> $DIR/capture-analysis-diagnostic.rs:12:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let _b = b.0;
LL | |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing b[Deref,(0, 0)] -> ImmBorrow
  --> $DIR/capture-analysis-diagnostic.rs:15:18
   |
LL |         let _b = b.0;
   |                  ^^^

error: Min Capture analysis includes:
  --> $DIR/capture-analysis-diagnostic.rs:12:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let _b = b.0;
LL | |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture b[] -> ImmBorrow
  --> $DIR/capture-analysis-diagnostic.rs:15:18
   |
LL |         let _b = b.0;
   |                  ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
